springboot-microservice/box-connector.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: box-connector
  namespace: mddz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: box-connector
  template:
    metadata:
      annotations:
        # these annotations limit the resource consumption of istio sidecar containers
        sidecar.istio.io/proxyCPU: 80m
        sidecar.istio.io/proxyCPULimit: 100m
        sidecar.istio.io/proxyMemory: 150Mi
        sidecar.istio.io/proxyMemoryLimit: 300Mi
        prometheus.io/scrape: "true"
        prometheus.io/port: "8091"
      labels:
        app: box-connector
        app.kubernetes.io/name: box-connector
        app.kubernetes.io/component: backend
    spec:
      # Ensures graceful shutdown for Spring Boot, specifies the amount of time (in seconds) to allow a pod to shut down gracefully before it is forcefully terminated
      terminationGracePeriodSeconds: 30
      # each microservice should have its own service account to ensure the principles of isolation and least privilege are followed
      serviceAccountName: box-connector-sa
      volumes:
        - name: box-connector-logs
          persistentVolumeClaim:
            claimName: box-connector-logs-claim
      # this is for pulling images from private repository
      imagePullSecrets:
        - name: my-reg-key
      # fsGroup must be inside spec.securityContext (pod-level):
      # fsGroup changes group ownership for mounted volumes at the pod level, not per-container. Kubernetes will ignore it at container level
      securityContext:
        fsGroup: 10001
# this is a bad approach as it removes root access also for init-container and istio sidecars
#        runAsUser: 10000
#        runAsGroup: 10001
      containers:
      - name: box-connector
        # Image tag should NOT use -SNAPSHOT, 1.0.0-SNAPSHOT breaks immutability and reproducibility
        # use 1.0.0 or 1.0.0-abc123
        image: registry.****.***.com/mddz/box-connector:1.0.0
        # container-level security setting in Kubernetes that prevents a process inside the container from gaining more privileges than its parent process
        # prevents the container from increasing its privileges, even if: he executable has Linux setuid or setgid bits, a process tries to gain root privileges, the image contains binaries that normally escalate privileges.
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          # already set a non-root UID, but Kubernetes doesn’t enforce it unless you add:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8091
        imagePullPolicy: Always
        # reference non-password env variables from a configMap, instead of hardcoding them:
        resources:
          requests:
            cpu: 80m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8091
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8091
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        # in case of slow boot and long time for startup for springBoot, startup probe prevents premature liveness failure
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8091
          failureThreshold: 30
          periodSeconds: 5
# using init-container for waiting period is a better approach
#        args:
#          - /bin/bash
#          - -c
#          - echo "Setting the container to sleep for 5 minutes"; sleep 300;

---

apiVersion: v1
kind: Service
metadata:
  name: box-connector-service
  namespace: mddz
  labels:
    app: box-connector
    app.kubernetes.io/name: box-connector
  # annotations for collecting metrics from service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8091"
spec:
  # application maintains sessions (Spring + file uploads, OAuth flows, etc.)
  sessionAffinity: ClientIP
  type: ClusterIP
  # clarifies if the service uses IPV4 or IPV6:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: box-connector
  ports:
  - protocol: TCP
    port: 8091
    targetPort: 8091
