springboot-microservice/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: mddz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8888"
      labels:
        app: config-server
        app.kubernetes.io/name: config-server
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: config-server-sa
      volumes:
        - name: config-server-logs
          persistentVolumeClaim:
            claimName: config-server-logs-claim
        - name: known-hosts
          configMap: 
            name: hosts
      imagePullSecrets:
        - name: my-reg-key
      securityContext:
        fsGroup: 10001
      containers:
      - name: config-server
        image: registry.***.****.com/mddz/config-server:1.0.0
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
# we can't set root to readonly as Spring Config Server accesses Git via SSH and SSH writes to temporary directories
          # /tmp and $HOME/.ssh should be readable
#          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8888
        imagePullPolicy: Always

#        - name: SPRING_PROFILES_ACTIVE
#          value: "remote,dev"
#        - name: mddz_EUREKA_PEER1_HOST
#          value: service-registry-service-1
#        - name: mddz_EUREKA_PEER2_HOST
#          value: service-registry-service-2
#        - name: mddz_EUREKA_PEER3_HOST
#          value: service-registry-service-3
#        - name: EUREKA_INSTANCE_HOSTNAME
#          value: config-server-service
#        - name: mddz_EUREKA_PORT
#          value: "8761"
#        - name: JAVA_TOOL_OPTIONS
#          value: "-Xms256m -Xmx410m"
#        - name: SPRING_CLOUD_CONFIG_SERVER_GIT_STRICTHOSTKEYCHECKING
#          value: "true"
#        - name: SPRING_CLOUD_CONFIG_SERVER_GIT_IGNORE_LOCAL_SSH_SETTINGS
#          value: "true"
        resources:
          requests:
            cpu: 100m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8888
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8888
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8888
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
          - name: config-server-logs
            mountPath: /home/mddz/logs/config-server
            subPathExpr: $(INSTANCE)
          - name: known_hosts
            mountPath: /home/mddz/.ssh/known_hosts
            subPath: known-hosts

---

apiVersion: v1
kind: Service
metadata:
  name: config-server-service
  namespace: mddz
  labels:
    app: config-server
    app.kubernetes.io/name: config-server
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8888"
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: config-server
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
