springboot-microservice/configuration-fetcher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuration-fetcher
  namespace: mddz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration-fetcher
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
      labels:
        app: configuration-fetcher
        app.kubernetes.io/name: configuration-fetcher
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: configuration-fetcher-sa
      volumes:
        - name: configuration-fetcher-logs
          persistentVolumeClaim:
            claimName: configuration-fetcher-logs-claim
      imagePullSecrets:
        - name: my-reg-key
      securityContext:
        fsGroup: 10001
      containers:
      - name: configuration-fetcher
        image: registry.***.****.com/mddz/configuration-fetcher:1.0.0
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8081
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
          - name: configuration-fetcher-logs
            mountPath: /home/mddz/logs/configuration-fetcher
            subPathExpr: $(INSTANCE)

---

apiVersion: v1
kind: Service
metadata:
  name: configuration-fetcher-service
  namespace: mddz
  labels:
    app: configuration-fetcher
    app.kubernetes.io/name: configuration-fetcher
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8081"
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: configuration-fetcher
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
