springboot-microservice/email-sender.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-sender
  namespace: mddz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-sender
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 80m
        sidecar.istio.io/proxyCPULimit: 100m
        sidecar.istio.io/proxyMemory: 150Mi
        sidecar.istio.io/proxyMemoryLimit: 300Mi
        prometheus.io/scrape: "true"
        prometheus.io/port: "8084"
      labels:
        app: email-sender
        app.kubernetes.io/name: email-sender
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: email-sender-sa
      volumes:
        - name: email-sender-logs
          persistentVolumeClaim:
            claimName: email-sender-logs-claim
      imagePullSecrets:
        - name: my-reg-key
      securityContext:
        fsGroup: 10001
      containers:
      - name: email-sender
        image: registry.****.****.com/mddz/email-sender:1.0.0
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8084
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8084
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8084
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8084
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
          - name: email-sender-logs
            mountPath: /home/mddz/logs/email-sender
            subPathExpr: $(INSTANCE)

---

apiVersion: v1
kind: Service
metadata:
  name: email-sender-service
  namespace: mddz
  labels:
    app: email-sender
    app.kubernetes.io/name: email-sender
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8084"
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: email-sender
  ports:
  - protocol: TCP
    port: 8084
    targetPort: 8084
