springboot-microservice/notification-fetcher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-fetcher
  namespace: mddz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-fetcher
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 80m
        sidecar.istio.io/proxyCPULimit: 100m
        sidecar.istio.io/proxyMemory: 150Mi
        sidecar.istio.io/proxyMemoryLimit: 300Mi
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
      labels:
        app: notification-fetcher
        app.kubernetes.io/name: notification-fetcher
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: notification-fetcher-sa
      volumes:
        - name: notification-fetcher-logs
          persistentVolumeClaim:
            claimName: notification-fetcher-logs-claim
      imagePullSecrets:
        - name: my-reg-key
      securityContext:
        fsGroup: 10001
      containers:
      - name: notification-fetcher
        image: registry.code.***.com/mddz/notification-fetcher:1.0.0
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8082
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8082
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8082
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8082
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
          - name: notification-fetcher-logs
            mountPath: /home/mddz/logs/notification-fetcher
            subPathExpr: $(INSTANCE)

---

apiVersion: v1
kind: Service
metadata:
  name: notification-fetcher-service
  namespace: mddz
  labels:
    app: notification-fetcher
    app.kubernetes.io/name: notification-fetcher
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8082"
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: notification-fetcher
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
