springboot-microservice/service-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry-1
  namespace: mddz
spec:
  selector:
    matchLabels:
      app: service-registry-1
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 80m
        sidecar.istio.io/proxyCPULimit: 100m
        sidecar.istio.io/proxyMemory: 150Mi
        sidecar.istio.io/proxyMemoryLimit: 300Mi
        prometheus.io/scrape: "true"
        prometheus.io/port: "8761"
      labels:
        app: service-registry-1
        app.kubernetes.io/name: service-registry-1
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: service-registry-sa
      volumes:
        - name: peer1-logs
          persistentVolumeClaim:
            claimName: peer1-logs-claim
      imagePullSecrets:
        - name: my-reg-key
      securityContext:
        fsGroup: 10001
      containers:
      - name: service-registry-1
        image: registry.code.***.com/mddz/service-registry:1.0.0
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8761
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8761
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8761
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
          - name: peer1-logs
            mountPath: /home/mddz/logs/service-registry
            subPathExpr: $(INSTANCE_NAME)

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry-2
  namespace: mddz
spec:
  selector:
    matchLabels:
      app: service-registry-2
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 80m
        sidecar.istio.io/proxyCPULimit: 100m
        sidecar.istio.io/proxyMemory: 150Mi
        sidecar.istio.io/proxyMemoryLimit: 300Mi
        prometheus.io/scrape: "true"
        prometheus.io/port: "8761"
      labels:
        app: service-registry-2
        app.kubernetes.io/name: service-registry-2
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: service-registry-sa
      volumes:
        - name: peer2-logs
          persistentVolumeClaim:
            claimName: peer2-logs-claim
      imagePullSecrets:
        - name: my-reg-key
      securityContext:
        fsGroup: 10001
      containers:
      - name: service-registry-2
        image: registry.code.***.com/mddz/service-registry:1.0.0
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8761
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8761
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8761
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
          - name: peer2-logs
            mountPath: /home/mddz/logs/service-registry
            subPathExpr: $(INSTANCE_NAME)

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry-3
  namespace: mddz
spec:
  selector:
    matchLabels:
      app: service-registry-3
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 80m
        sidecar.istio.io/proxyCPULimit: 100m
        sidecar.istio.io/proxyMemory: 150Mi
        sidecar.istio.io/proxyMemoryLimit: 300Mi
        prometheus.io/scrape: "true"
        prometheus.io/port: "8761"
      labels:
        app: service-registry-3
        app.kubernetes.io/name: service-registry-3
        app.kubernetes.io/component: backend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: service-registry-sa
      volumes:
        - name: peer3-logs
          persistentVolumeClaim:
            claimName: peer3-logs-claim
      imagePullSecrets:
        - name: my-reg-key
      securityContext:
        fsGroup: 10001
      containers:
      - name: service-registry-3
        image: registry.code.***.com/mddz/service-registry:1.0.0
        securityContext:
          runAsUser: 10000
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8761
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8761
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 8761
            path: /actuator/health/readiness
          initialDelaySeconds: 10
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
          - name: peer3-logs
            mountPath: /home/mddz/logs/service-registry
            subPathExpr: $(INSTANCE_NAME)

---

apiVersion: v1
kind: Service
metadata:
  name: service-registry-service-1
  namespace: mddz
  labels:
    app: service-registry-1
    app.kubernetes.io/name: service-registry-1
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8761"
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: service-registry-1
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761

---

apiVersion: v1
kind: Service
metadata:
  name: service-registry-service-2
  namespace: mddz
  labels:
    app: service-registry-2
    app.kubernetes.io/name: service-registry-2
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8761"
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: service-registry-2
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761

---

apiVersion: v1
kind: Service
metadata:
  name: service-registry-service-3
  namespace: mddz
  labels:
    app: service-registry-3
    app.kubernetes.io/name: service-registry-3
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8761"
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: service-registry-3
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761
