springboot-microservice/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: mddz
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # health checks & rate limits
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"

spec:
  # we use already existing TLS encryption
  tls:
  - hosts:
      - mddz.kubmun.***.***.com
    secretName: tls-secret  # add TLS secret name here

  rules:
  - host: mddz.kubmun.***.***.com
    http:
      paths:

      - path: /peer1
        pathType: Prefix
        backend:
          service:
            name: service-registry-service-1
            port:
              number: 8761

      - path: /peer2
        pathType: Prefix
        backend:
          service:
            name: service-registry-service-2
            port:
              number: 8762

      - path: /peer3
        pathType: Prefix
        backend:
          service:
            name: service-registry-service-3
            port:
              number: 8763

      - path: /cloud-admin
        pathType: Prefix
        backend:
          service:
            name: cloud-admin-service
            port:
              number: 9999

      - path: /configuration-fetcher
        pathType: Prefix
        backend:
          service:
            name: configuration-fetcher-service
            port:
              number: 8081

      - path: /report-uploader
        pathType: Prefix
        backend:
          service:
            name: report-uploader-service
            port:
              number: 8085
