springboot-microservice/network-policy-box-connector.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: box-access
  namespace: mddz
spec:
  podSelector:
    matchLabels:
      app: box-connector
  policyTypes:
    - Ingress
# only file-handler can connect to box-connector and only on port 8091, others can be added if it is needed
  ingress:
    - from:
       # List of allowed pods that can access box-connector
      - podSelector:
          matchLabels:
            app: file-handler
        namespaceSelector:
          matchLabels:
            name: mddz
      # List of allowed ports
      ports:
        - protocol: TCP
          port: 8091
